--- a/src/app/rapid-system/rapid-system.component.html
+++ b/src/app/rapid-system/rapid-system.component.html
@@ -125,7 +125,7 @@
                     <div class="col-4"></div>
                     <div class="col-4">
                         <div class="profile-picture">
-                            <img src="http://localhost:8080/images/{{profilePictureName}}" alt="">
+                            <img src="http://localhost:8080/images/ProfilePicture/{{profilePictureName}}" alt="">
                         </div>
                     </div>
                     <div class="col-4"></div>
