--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -301,6 +301,7 @@
             </div>
         </div>
     </form>
+    
     <!-- student class fee payment details -->
     <div class="grid pt-5" *ngIf="activeStepIndex == 3">
         <div class="col-2"></div>
@@ -434,6 +435,6 @@
 
 </p-dialog>
 
-<div *ngIf="!isloaded" class="loading">
+<div *ngIf="!isloading" class="loading">
     <img src="../../assets/giphy.gif" alt="" srcset="" class="lodingGif">
 </div>
