--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -86,6 +86,23 @@
             </div>
         </div>
     </div>
+    
+    <div class="grid mt-3 ml-10">
+        <div class="col-2"></div>
+        <div class="col-10">
+            <div class="grid">
+                <div class="col-4">
+                    <button class="transparent-btn" (click)="loadTerms(1)"> Terms & Conditionse</button>
+                </div>
+                <div class="col-4">
+                    <button class="transparent-btn" (click)="loadTerms(2)"> Privacy Policy</button>
+                </div>
+                <div class="col-4">
+                    <button class="transparent-btn" (click)="loadTerms(3)"> Refund Policy</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
@@ -438,3 +455,15 @@
 <div *ngIf="!isloading" class="loading">
     <img src="../../assets/giphy.gif" alt="" srcset="" class="lodingGif">
 </div>
+
+<p-dialog header="Terms & Conditionse" [(visible)]="istacLoaded" [style]="{width: '60vw'}" [modal]="true" (onHide)="closeTerms()">
+    <app-terms-and-conditions></app-terms-and-conditions>
+</p-dialog>
+
+<p-dialog header="Privacy Policy" [(visible)]="isprivacyLoaded" [style]="{width: '60vw'}" [modal]="true" (onHide)="closeTerms()">
+    <app-terms-and-conditions></app-terms-and-conditions>
+</p-dialog>
+
+<p-dialog header="Refund Policy" [(visible)]="isRefundLoaded" [style]="{width: '60vw'}" [modal]="true" (onHide)="closeTerms()">
+    <app-terms-and-conditions></app-terms-and-conditions>
+</p-dialog>
