--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,9 +1,9 @@
 <div class="banner-img">
     <p-toast></p-toast>
     <div class="grid pt-5">
-        <div class="col-11"></div>
-        <div class="col-1">
-            <button label="Register" class="p-button-info" pButton (click)="openStudentForm(true)"></button>
+        <div class="col-10"></div>
+        <div class="col-2">
+            <button label="Student Registration" class="p-button-info" pButton (click)="openStudentForm(true)"></button>
         </div>
     </div>
     <div class="container">
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-12 text-white ml-3 pr-6">
                     <span>
-                        <p class="parprphalign">To become a leading online education institute in Sri Lanka, empowering O/L students with quality digital learning experiences that inspire growth, confidence, and academic excellence—anytime, anywhere.</p>
+                        <p class="parprphalign">To become a leading online education institute in Sri Lanka, empowering O/L students with quality digital learning experiences that inspire growth, confidence, and academic excellence anytime, anywhere.</p>
                     </span>
                 </div>
                 <div class="col-12 text-white text-2xl font-bold ml-3">
