teacher update form issue fixing

--- a/src/app/manage-teachers/manage-teachers.component.html
+++ b/src/app/manage-teachers/manage-teachers.component.html
@@ -162,9 +162,9 @@
                 <div class="col-4">
                     <label><span class="Requied ">* </span>Gender : </label> <br>
                     <label for="male">Male</label>&nbsp;
-                    <p-radioButton value="Male" inputId="male" formControlName="gender"></p-radioButton>&nbsp;
+                    <p-radioButton value="male" inputId="male" formControlName="gender"></p-radioButton>&nbsp;
                     <label for="female">Female</label>&nbsp;
-                    <p-radioButton value="Female" inputId="female" formControlName="gender"></p-radioButton>
+                    <p-radioButton value="female" inputId="female" formControlName="gender"></p-radioButton>
                 </div>
             </div>
             <div class="grid pt-5">
