--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div class="banner-img">
+<div class="banner-img" *ngIf="!isLoginig">
     <p-toast></p-toast>
     <div class="grid pt-5">
         <div class="col-10"></div>
@@ -463,3 +463,7 @@
 <p-dialog header="Refund Policy" [(visible)]="isRefundLoaded" [style]="{width: '60vw'}" [modal]="true" (onHide)="closeTerms()">
     <app-terms-and-conditions></app-terms-and-conditions>
 </p-dialog>
+
+<div *ngIf="isLoginig" class="loading">
+    <img src="../../assets/giphy.gif" alt="" srcset="" class="lodingGif">
+</div>
