login issue fix

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div class="banner-img" *ngIf="!isLoginig">
+<div class="banner-img">
     <p-toast></p-toast>
     <div class="grid pt-5">
         <div class="col-10"></div>
