--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -463,7 +463,7 @@
 <p-dialog header="Refund Policy" [(visible)]="isRefundLoaded" [style]="{width: '60vw'}" [modal]="true" (onHide)="closeTerms()">
     <app-terms-and-conditions></app-terms-and-conditions>
 </p-dialog>
-
+<!-- 
 <div *ngIf="isLoginig" class="loading">
     <img src="../../assets/giphy.gif" alt="" srcset="" class="lodingGif">
-</div>
+</div> -->
